[gd_scene load_steps=3 format=2]

[ext_resource path="res://client/states/CharacterConfirmationState.gd" type="Script" id=1]
[ext_resource path="res://common/GameBackground.tscn" type="PackedScene" id=2]

[node name="CharacterConfirmationState" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBackground" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -260.0
margin_bottom = -230.0
rect_scale = Vector2( 2, 2 )
text = "The character's selected are:"
align = 1

[node name="CharacterSelectionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -210.0
margin_right = 6.10352e-05
margin_bottom = -60.0
rect_scale = Vector2( 2, 2 )
text = "
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 140.0
margin_bottom = 175.0
rect_scale = Vector2( 2, 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 230.0
margin_right = 6.10352e-05
margin_bottom = 260.0
rect_scale = Vector2( 2, 2 )
text = "Waiting for other players..."
align = 1
